[FLINK-10725][build] Initialize JDK 11 profile